// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Styles/Justify > handles responsive value 1`] = `
{
  "variables": {
    "--rs-justify-l": "end",
    "--rs-justify-m": "center",
    "--rs-justify-s": "start",
  },
}
`;

exports[`Styles/Justify > handles undefined value 1`] = `{}`;

exports[`Styles/Justify > handles value 1`] = `
{
  "variables": {
    "--rs-justify-s": "start",
  },
}
`;
